@@ -7,7 +7,7 @@ Author: Jan Dittberner <jandd@debian.org>
 +++ b/setup.py
 @@ -5,10 +5,6 @@
  # Change docs/sphinx/conf.py too!
- VERSION = '2.8'
+ VERSION = '2.11.1'
  
 -# Bootstrap installation of Distribute
 -import distribute_setup
@@ -25,8 +25,8 @@ Author: Jan Dittberner <jandd@debian.org>
 -
      provides=['virtualenvwrapper',
                'virtualenvwrapper.user_scripts',
-               ],
-@@ -149,14 +142,7 @@
+               'virtualenvwrapper.project',
+@@ -150,14 +143,7 @@
  
      namespace_packages = [ 'virtualenvwrapper' ],
      packages = find_packages(),
