@@ -5,7 +5,7 @@ Subject: remove bitbucket requirement from sphinx configuration
  requirement
 --- a/docs/sphinx/conf.py
 +++ b/docs/sphinx/conf.py
-@@ -22,9 +22,9 @@
+@@ -23,9 +23,9 @@
  
  # Add any Sphinx extension module names here, as strings. They can be extensions
  # coming with Sphinx (named 'sphinx.ext.*') or your custom ones.
